re-ran measurements

--- a/README.adoc
+++ b/README.adoc
@@ -73,58 +73,44 @@ worst:        135.17       135.17       135.17       135.17       135.17       1
 
 = Results longer-running
 
-These tests compare purely in-memory (AgronaManyToOneMemoryJLBH vs ErbJLBH) and memory-mapped-file-backed
-(AgronaManyToOneFileJLBH vs Queue) for a larger, longer-running workload. Each run is
-5,000,000 iterations of a 124 byte message = 620MB of data.
-
-We can see that outliers are much worse for the memory-mapped-file-backed file tests.
+These tests compare purely performance for a larger, longer-running workload. Each run is
+5,000,000 iterations of a 128 byte message @ 50K/sec = 620MB of data.
 
 == AgronaManyToOneFileJLBH
 ```
--------------------------------- SUMMARY (end to end)------------------------------------------------------------
-Percentile   run1         run2      % Variation
-50:             0.17         0.17         0.00
-90:             0.20         0.20         0.00
-99:             1.70         2.02         0.00
-99.9:           8.96    553648.13         0.00
-99.99:         10.50    721420.29         0.00
-99.999:        13.06    721420.29         0.00
+-------------------------------- SUMMARY (end to end)---------------------------------
+Percentile   run1         run2         run3         run4         run5      % Variation
+50:             0.34         0.33         0.33         0.33         0.33         0.00
+90:             0.41         0.39         0.39         0.39         0.39         0.17
+99:             3.04         0.47         1.46         2.03         1.73        69.17
+99.9:           5.13         3.47         3.35         3.38         3.37         2.41
+99.99:       2806.78         4.53         3.61         3.71         3.61        14.45
+99.999:     11554.82       452.22       593.15       734.46         7.96        98.38
+worst:      12513.28      1422.85      1555.97      1690.11       362.62        70.93
 ```
 
-== Queue
+== Queue (w pretouch)
 ```
--------------------------------- SUMMARY (end to end)------------------------------------------------------------
-Percentile   run1         run2         run3         run4         run5         run6      % Variation
-50:             0.28         0.28         0.28         0.28         0.28         0.28         0.00
-90:             0.33         0.33         0.33         0.33         0.36         0.33         6.11
-99:             2.11         1.89         1.63         1.89         1.63         1.76         9.47
-99.9:           9.47         9.47         8.45         9.47         8.45         8.96         7.48
-99.99:        499.71       319.49       352.26       217.09       208.90       192.51        35.62
-99.999:      3080.19      2555.90      2555.90      2424.83      2424.83      2424.83         3.48
-worst:       4849.66      2949.12      3080.19      2949.12      3211.26      3080.19         5.59
-```
-
-== AgronaManyToOneMemoryJLBH
-```
--------------------------------- SUMMARY (end to end)------------------------------------------------------------
-Percentile   run1         run2      % Variation
-50:             0.16         0.17         0.00
-90:             0.19         0.20         0.00
-99:             0.24         0.24         0.00
-99.9:           8.06         6.78         0.00
-99.99:          9.98         9.98         0.00
-99.999:        12.03        10.50         0.00
+-------------------------------- SUMMARY (end to end)---------------------------------
+Percentile   run1         run2         run3         run4         run5      % Variation
+50:             0.59         0.59         0.59         0.59         0.59         0.11
+90:             0.67         0.66         0.66         0.66         0.66         0.20
+99:             3.39         3.42         3.42         3.39         3.39         0.51
+99.9:         300.16        43.73         7.06         4.31         4.72        85.91
+99.99:      17473.54      6109.18      4945.92      4191.23      4581.38        23.38
+99.999:     25649.15     13643.78      6084.61      5883.90      5908.48        46.79
+worst:      26386.43     14397.44      6498.30      6195.20      6428.67        46.88
 ```
 
 == ErbJLBH
 ```
--------------------------------- SUMMARY (end to end)------------------------------------------------------------
-Percentile   run1         run2         run3         run4         run5         run6      % Variation
-50:             0.49         0.49         0.49         0.53         0.59         0.69        21.46
-90:             0.53         0.53         0.56         0.59         0.72         0.78        24.43
-99:             2.37         0.69         4.03         0.69         0.82         0.85        76.42
-99.9:           9.47         9.47         9.98         9.47         8.96         9.47         7.08
-99.99:         11.01        11.01        11.01        11.01        11.01        11.01         0.00
-99.999:      2555.90      1474.56       335.87      1540.10      1146.88      1605.63        71.59
-worst:       4849.66      3997.70      2686.98      2818.05      3473.41      3997.70        24.54
+-------------------------------- SUMMARY (end to end)----------------------------------
+Percentile   run1         run2         run3         run4         run5      % Variation
+50:             0.61         0.62         0.63         0.63         0.63         0.53
+90:             0.66         0.66         0.67         0.67         0.67         0.20
+99:             1.81         0.73         0.72         0.73         0.71         1.84
+99.9:           7.43         1.86         1.85         1.95         0.78        49.93
+99.99:      17637.38      5421.06         2.02         4.08         1.00        99.97
+99.999:     26501.12      9826.30       383.87       267.39        43.79        99.33
+worst:      27451.39     10465.28      1142.27      1137.15       561.41        92.16
 ```
